static/css/base.css
/* Custom Stylesheet */

html {
  height: 100%;
  scroll-behavior: smooth;
}

body {
  /* height: calc(100vh - 164px); */
  background-size: cover;
  font-family: 'Ubuntu Condensed', sans-serif;
  font-size: 20px;
}

/* ---------- Text, Margin, Paddings ---- */

p {
  line-height: 2rem;
}

.stuck {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
}

.small-text {
  font-size: 1.1rem;
}

.mt-20 {
  margin-top: 25px;
}

.mt-50 {
  margin-top: 50px;
}

.mb-0 {
  margin-bottom: 0;
}

.mb-20 {
  margin-bottom: 25px;
}

.mx-20 {
  margin-right: 20px;
  margin-left: 20px;
}

.mr-20 {
  margin-right: 20px;
}

.no-cursor {
  cursor: auto;
}

.pointer {
  cursor: pointer;
}

.pad-0 {
  padding: 0;
}

.pad-10pe {
  padding: 10%;
}

.allauth-container {
  margin-top: 40px;
  margin-bottom: 40px;
  text-align: center;
}

/* ---------- Navbar ------------ */

#navbar-background {
  background: url('/media/nav_background.jpeg') no-repeat right fixed;
  background-size: cover;
}

nav .brand-logo {
  font-size: 1.4rem;
}

header nav {
  height: 200px;
  padding-top: 10px;
  background-color: rgba(0, 0, 0, 0);
}

#content-navbar,
#content-nav-mobile {
  padding: 20px 0;
}

#content-navbar {
  background-color: rgba(211, 18, 69, 0.7);
}

#mobile-button-collapse {
  font-size: 40px;
  color: #fafafa;
}

.mobile-top-header a {
  color: #fafafa;
  padding: 5px 5px;
  font-size: 1.5rem;
}

.mobile-top-header a i {
  margin: 0 5px;
}

.nav-content .btn {
  margin: 8px 8px;
  width: 100px;
  padding: 0;
  height: 30px;
  line-height: 30px;
}

.side-nav li > a.btn {
  margin: 20px 15px;
  font-size: 20px;
}

.header-link {
  color: #fafafa;
  padding: 0 30px;
  text-shadow: 2px 2px 5px #000;
}

.dropdown-content a {
  text-shadow: none;
}

.button-collapse {
  color: #444;
}

#logo-image {
  text-align: center;
  display: block;
}

.logo-image-container img {
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  width: 150px;
}

.dropdown-item {
  color: #444;
}

/* ---------- Home -------------- */

#buy-home-btn {
  position: relative;
  z-index: 3;
  bottom: 170px;
  font-size: 1.7rem;
  left: 50%;
  width: 150px;
  height: 45px;
  line-height: 45px;
  border-radius: 0;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

/* Action Buttons Desktop  */

.btn-floating-label {
  position: fixed;
  right: 85px;
  padding: 0 0.5rem;
  width: 80px;
  text-align: center;
  background-color: rgba(50, 50, 50, 0.8);
  color: #fff;
  border-radius: 2px;
}

/* --------- Parallax ----------- */

.parallax-container {
  min-height: 600px;
  line-height: 0;
  height: auto;
  color: rgba(255, 255, 255, 0.9);
}

.parallax-container .section {
  position: absolute;
  top: 30%;
}

.parallax-container .section,
.container .section {
  width: 100%;
}

.about-parallax-container {
  height: 300vh;
}

.question-parallax {
  height: 150vh;
}

#index-banner .section {
  top: 30%;
}

.about-wrapper {
  background: white;
  padding: 5% 0%;
}

/* --------- Reviews ------------- */

.quote-collection {
  border: 0;
  overflow: unset;
}

.quote-img {
  height: 100px;
  width: 100px;
}

.quote-collection blockquote {
  margin-top: 120px;
}

.quote-collection .secondary-content {
  top: 50px;
  right: 10px;
}

.review-primary-content {
  position: absolute;
  top: 16px;
  left: 16px;
}

.quote-collection .avatar {
  padding-left: 20px;
}

/* --------- Section ------------- */

.icon-block {
  padding: 0 15px;
}

.icon-block .material-icons {
  font-size: inherit;
}

.slider h3,
.slider h5,
.light-shadow {
  text-shadow: 2px 2px 5px #000;
}

.slider .indicators .indicator-item.active {
  background-color: #26a69a;
}

/* ---------- Search Modal ------ */

.modal .modal-content {
  padding: 10px;
}

#search-bar-modal .modal-content {
  padding: 0;
  overflow-y: hidden;
}

#search-bar-modal nav,
#search-bar-modal .modal {
  background-color: rgba(0, 0, 0, 0);
}

#search-bar-modal i,
#search-bar-modal input {
  color: #444;
  margin: 0;
}

/* Contact Us Modal */

.modal-input-field .prefix {
  width: auto;
}

/* All Products Page */

.filter-products-collection {
  overflow: visible;
}

.checkboxes-container {
  padding-left: 20%;
}

.product-card-container .card-image,
.product-card-container .card-content {
  height: 250px;
  padding-top: 5px;
}

.product-card-container .card-title {
  font-size: 23px;
  margin-top: 10px;
  height: 35%;
}

.product-card-container .card-image .material-placeholder {
  height: 100%;
}

.product-card-container .card-image img {
  max-height: 245px;
  width: auto;
  max-width: 100%;
  margin: 10px auto 0 auto;
}

.product-card-container .card-content {
  height: 250px;
  padding: 15px;
}

.rating-stars-container {
  height: 20%;
  overflow-y: hidden;
}

.product-card-container .chip {
  width: 100%;
}

.chip a {
  color: rgba(0, 0, 0, 0.6);
}

.card-content .badge {
  float: left;
  margin-right: 14px;
  margin-left: 0;
  margin-top: 10px;
}

#card-price-text {
  color: #00a890;
  font-size: 1.2em;
  margin-bottom: 10px;
}

.select-wrapper input.select-dropdown {
  color: #26a69a;
  font-size: 1.2rem;
}

/* Detail Product Page */

.star-ratings {
  font-size: 1rem;
}

.price-rating-container {
  text-align: center;
}

.add-to-cart-button {
  margin: 20px 10px;
}

.product-detail-table td,
.product-detail-table th {
  font-size: 1rem;
  width: 50%;
}

.detail-subtotal-label {
  font-size: 1.4rem;
  display: block;
}

.facts-table-container {
  padding: 0 8%;
}

#add-to-cart-container {
  padding: 2% 5%;
}

#other-images-slider .indicator-item {
  background-color: rgb(0 150 136 / 0.3);
}

#other-images-slider .indicator-item.active {
  background-color: #009688;
}

.input-field.col .dropdown-content [type="checkbox"] + label {
  top: -10px;
  margin-top: 5px;
}

.grind-option-selector {
  margin-top: 40px;
}

.option-label {
  font-size: 1.4rem;
  color: black;
  display: block;
}

.fixed-action-btn-title {
  margin-right: 10px;
}

.img-icon {
  width: 25px;
  max-height: 30px;
  max-width: 80%;
  margin: 8px;
  filter: invert(1);
}

.decrement-qty,
.increment-qty {
  width: 70px;
  padding: 0;
}

.change-qty-icon {
  line-height: unset;
}

.modal-decrement-qty,
.modal-increment-qty {
  width: 45px;
  padding: 0;
}

/* Cart Page */

.div-cover-image {
  width: 100%;
  height: 400px;
  object-fit: cover;
}

.update-form {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.table-cart-container {
  overflow-x: auto;
}

.cart-table-product-col-name {
  min-width: 115px;
}

.update-quantity-col {
  width: 80px;
}

.price-update-col {
  min-width: 70px;
}

.update-quantity-col .btn-flat {
  width: 60px;
}

/* ---------- Footer ------------ */

footer.page-footer {
  margin: 0;
}

/* -------------------------------------Media Querries --------------- */

/* Small */

@media only screen and (max-width: 768px) {
  table.responsive-table th,
  table.responsive-table td {
    margin: 0;
    vertical-align: middle;
    height: 180px;
  }
}

/* Tablet */

@media only screen and (min-width: 768px) {
  header nav {
    height: 400px;
    padding-top: 20px;
    background-color: rgba(0, 0, 0, 0);
  }

  #navbar-background {
    background: url('/media/nav_background.jpeg') no-repeat center fixed;
    background-size: cover;
  }

  nav .brand-logo {
    color: #444;
    left: 55%;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    width: 80%;
    font-size: 2rem;
  }

  #mobile-button-collapse {
    color: #444;
  }

  .mobile-top-header a {
    padding: 5px 10px;
    font-size: 1.7rem;
  }

  .about-parallax-container {
    height: 200vh;
  }

  .question-parallax {
    height: 60vh;
  }

  #logo-image {
    display: block;
  }

  .logo-image-container img {
    margin-top: 30px;
    width: 300px;
  }

  .price-rating-container {
    text-align: left;
  }

  .mobile-selector {
    display: none;
  }
}

/* Large */

@media only screen and (min-width: 1024px) {
  header nav {
    padding-top: 50px;
    height: 500px;
  }

  nav .nav-content {
    padding-bottom: 20px;
  }

  nav.container {
    width: 80%;
  }

  header nav,
  header nav .nav-wrapper i,
  header nav a.button-collapse,
  header nav a.button-collapse i {
    line-height: 70px;
  }

  nav .brand-logo {
    width: 250px;
    left: 0%;
    -webkit-transform: translateX(0%);
    transform: translateX(0%);
  }

  header nav ul a,
  header nav .right a {
    font-size: 1.7rem;
  }

  .header-link {
    font-size: 2rem;
  }

  .logo-image-container img {
    margin-top: 50px;
    width: 400px;
  }
}

